remove hardcoded ingredient ids